--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="53" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="53" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="A52a0YqnQgJVf1p3T34jd5LtIJy96ShW/4oIZvk0HNDu7RmpPAmFgI6r1nI+KLmJKLxiiQ+D1u6MsXDQT+bfKeJTHV2eGdm6G1VrlHpMsYOvc3RyoWFNjLslfPoRKjh8" data-form-email="true">
+                        <input type="hidden" value="ecw05j2A2gUUXMI8H46BAhNIFSBpSVE/b8lR+0gN7qSIUzVNnvJxFUx9OUM+d4mpEqrAkphhj+AaYW9TLJNWf+d62ZADkXYwKgYDquxsIhJ/ub6UtnBcdLTUKnnaSsMc" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
