--- a/agb.html
+++ b/agb.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3" data-rv-view="30" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3" data-rv-view="30" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -84,7 +84,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1" data-rv-view="26" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>Copyright (c) 2016 Posmodule.</p>
+        <p>Copyright (c) 2019 Posmodule.</p>
     </div>
 </footer>
 
