--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-o" data-rv-view="57">
+  <section id="ext_menu-o" data-rv-view="77">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="79" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-r" data-rv-view="62" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-r" data-rv-view="82" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section form1" id="form1-1c" data-rv-view="64" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1" id="form1-1c" data-rv-view="84" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="3BHRKRiUI2TZSeRnjE7+AXrCjGciCxeSsPxKIOOD0kydNdAz4YnKBg/TMH/d6sB5IY7K0uWDRvsZf+SiiLpuGpqhx7kGY7oU/2IWM+aA5wTWSV24LHC1TT138InYdcOB" data-form-email="true">
+                        <input type="hidden" value="QGPzzISmFXMBgcSTTpUpI36D6jNhGqQJmBceOefWw0bC8UWUJpJoBmfvJMUZeeepd4E0PT9azUV03FtfQFxiUtbqUcx3tP7DH25PSzvHcI0RJnOnvBrDTAj04WzS7MKW" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -147,7 +147,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-1o" data-rv-view="73" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-1o" data-rv-view="93" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -164,7 +164,7 @@ Telefon: +49 89 25 55 19 110<br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Mehr</strong><br>
-<a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a><br><a href="assets/files/DSGVO%20Posmodule.pdf">Datenschutz und GDPR/DSGVO</a></p>
+<a class="text-primary" href="agb.html">AGB</a><br><a href="https://www.facebook.com/posmodule" target="_blank">Posmodule auf Facebook</a><br><a href="http://apps.shopify.com/posmodule">Addon bei Shopify</a><br><a href="assets/files/DSGVO%20Posmodule.pdf">Datenschutz und GDPR/DSGVO</a></p>
             </div>
 
         </div>
